# rlox

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
git-hooks/: check-all.sh
interpreter/: Cargo.toml
interpreter/src/: expr_evaluator.rs  interpreter.rs  lox_value.rs  main.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  owned_token.rs
parser/: Cargo.toml
parser/src/: ast_printer.rs  expr.rs  lib.rs  stmt.rs
