[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
default-run = "rloxi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rloxi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
atty = "0.2.14"
clap = { version = "3.1.8", features = ["derive"] }
lexer = { path = "../lexer" }
parser = { version = "0.1.0", path = "../parser" }
